--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    name: yastest  #数据库名
+    name: yastest
     url: jdbc:mysql://192.168.0.188:3306/yastest?serverTimezone=GMT%2B8&useUnicode=true&useSSL=true #url
-    username: root  #用户名
-    password: root  #密码
+    username: root
+    password: root
 mybatis:
-  mapper-locations: classpath:mapper/*.xml  #配置映射文件
+  mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.springboot.yaoaosai.entity
+server:
+  port: 8889
