基础版本提交，添加日志操作记录,实现springboot+shrio+jwt

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,6 @@ mybatis:
   type-aliases-package: com.springboot.yaoaosai.entity
 server:
   port: 8899
+logging:
+  level:
+    com.springboot.mapper : debug
