--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,26 +5,18 @@ spring:
     url: jdbc:mysql://192.168.0.188:3306/yastest?serverTimezone=GMT%2B8&useUnicode=true&useSSL=true #url
     username: root
     password: root
-  redis:
-    database: 0
-    host: 192.168.240.130
-    port: 6379
-    password:
-    jedis:
-      pool:
-        max-active: 1
-        max-wait: -1
-        max-idle: 10
-        min-idle: 10
-    timeout: 1000
-  thymeleaf:
-    cache: true
-    check-template-location: true
-    enabled: true
-    excluded-view-names:
-    mode: LEGACYHTML5
-    prefix: classpath:/templates/
-    suffix: .html
+#  redis:
+#    database: 0
+#    host: 192.168.240.130
+#    port: 6379
+#    password:
+#    jedis:
+#      pool:
+#        max-active: 1
+#        max-wait: -1
+#        max-idle: 10
+#        min-idle: 10
+#    timeout: 1000
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
