--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,18 @@ spring:
 #        max-idle: 10
 #        min-idle: 10
 #    timeout: 1000
+redis:
+  database: 0
+  host: 127.0.0.1
+  port: 6379
+  password:
+  jedis:
+    pool:
+      max-active: 1
+      max-wait: -1
+      max-idle: 10
+      min-idle: 10
+  timeout: 1000
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
